k8s-dashboard-for-k3s/dashboard-LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
spec:
  type: LoadBalancer
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 443
  selector:
    app: kubernetes-dashboard-kong-proxy
#
# kubectl -n kubernetes-dashboard port-forward svc/kubernetes-dashboard-kong-proxy 8443:443
